--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,6 +9,18 @@
         "nickname_placeholder": "Name",
         "nickname_empty_error": "Pick a name",
         "guest": "Guest",
+        "microphone_access": "You must grant access to your microphone before you can use it.",
+        "microphone_access_denied": "Update your permissions, then refresh the page.",
+        "microphone_access_not_found": "No microphone was found.",
+        "microphone_access_error": "An error occured, check that the microphone is not in use by another application and refresh the page.",
+        "camera_access": "Camera access",
+        "camera_access_denied": "You must grant access to your camera before you can use it.",
+        "camera_access_not_found": "No camera was found.",
+        "camera_access_error": "An error occured, check that the camera is not in use by another application and refresh the page.",
+        "twincode_error": "The Click-to-Call link you entered seems invalid.",
+        "general_error_title": "Oops!",
+        "general_error_message": "Sorry, something went wrong.",
+        "audio": "Audio",
         "audio_call_activity_calling": "Calling…",
         "calls_fragment_call_again_title": "Call back",
         "audio_call_activity_cannot_call": "Cannot make a voice call",
