--- a/src/i18n/fa.json
+++ b/src/i18n/fa.json
@@ -8,6 +8,17 @@
         "activate_camera": "دوربین خود را فعال کنید",
         "nickname_placeholder": "نام",
         "nickname_empty_error": "یک نام انتخاب کنید",
-        "guest": "مهمان"
+        "guest": "مهمان",
+        "microphone_access": "قبل از اینکه بتوانید از میکروفون خود استفاده کنید، باید اجازه دسترسی به آن را بدهید.",
+        "microphone_access_denied": "مجوزهای خود را به روز کنید، سپس صفحه را بازخوانی کنید.",
+        "microphone_access_not_found": "میکروفونی پیدا نشد",
+        "microphone_access_error": "خطایی روی داد، بررسی کنید که میکروفون توسط برنامه دیگری استفاده نمی شود و صفحه را بازخوانی کنید.",
+        "camera_access": "دسترسی به دوربین",
+        "camera_access_denied": "قبل از اینکه بتوانید از دوربین خود استفاده کنید، باید به دوربین خود دسترسی داشته باشید.",
+        "camera_access_not_found": "دوربینی پیدا نشد",
+        "camera_access_error": "خطایی روی داد، بررسی کنید که دوربین توسط برنامه دیگری استفاده نمی شود و صفحه را بازخوانی کنید.",
+        "twincode_error": "پیوند \"Click-to-Call\" که وارد کرده اید نامعتبر به نظر می رسد.",
+        "general_error_title": "اوه!",
+        "general_error_message": "با عرض پوزش، مشکلی پیش آمد."
     }
 }
