--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -9,6 +9,18 @@
         "nickname_placeholder": "Nom",
         "nickname_empty_error": "Choisissez un nom",
         "guest": "Invité",
+        "microphone_access": "Vous devez accorder l'accès à votre micro avant de pouvoir l'utiliser.",
+        "microphone_access_denied": "Mettez à jour vos permissions, puis rafraîchissez la page.",
+        "microphone_access_not_found": "Aucun micro n'a été trouvé.",
+        "microphone_access_error": "Une erreur s'est produite, vérifiez que le microphone n'est pas utilisé par une autre application et rafraîchissez la page.",
+        "camera_access": "Accès à la caméra",
+        "camera_access_denied": "Vous devez accorder l'accès à votre caméra avant de pouvoir l'utiliser.",
+        "camera_access_not_found": "Aucune caméra n'a été trouvée.",
+        "camera_access_error": "Une erreur s'est produite, vérifiez que la caméra n'est pas utilisée par une autre application et rafraîchissez la page.",
+        "twincode_error": "Le lien Click-to-Call que vous avez entré semble invalide.",
+        "general_error_title": "Oops!",
+        "general_error_message": "Désolé, un problème est survenu.",
+        "audio": "Audio",
         "audio_call_activity_calling": "Appel…",
         "calls_fragment_call_again_title": "Rappeler",
         "audio_call_activity_cannot_call": "Impossible de passer un appel vocal",
