--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -8,6 +8,17 @@
         "activate_camera": "अपना कैमरा सक्रिय करें",
         "nickname_placeholder": "नाम",
         "nickname_empty_error": "एक नाम चुनें",
-        "guest": "अतिथि"
+        "guest": "अतिथि",
+        "microphone_access": "इससे पहले कि आप इसका उपयोग कर सकें, आपको अपने माइक्रोफ़ोन तक पहुंच प्रदान करनी होगी।",
+        "microphone_access_denied": "अपनी अनुमतियाँ अद्यतन करें, फिर पृष्ठ को ताज़ा करें।",
+        "microphone_access_not_found": "कोई माइक्रोफ़ोन नहीं मिला.",
+        "microphone_access_error": "एक त्रुटि उत्पन्न हुई, जांचें कि माइक्रोफ़ोन किसी अन्य एप्लिकेशन द्वारा उपयोग में नहीं है और पृष्ठ को ताज़ा करें।",
+        "camera_access": "कैमरा पहुंच",
+        "camera_access_denied": "अपने कैमरे का उपयोग करने से पहले आपको उस तक पहुंच प्रदान करनी होगी।",
+        "camera_access_not_found": "कोई कैमरा नहीं मिला.",
+        "camera_access_error": "एक त्रुटि उत्पन्न हुई, जांचें कि कैमरा किसी अन्य एप्लिकेशन द्वारा उपयोग में नहीं है और पृष्ठ को ताज़ा करें।",
+        "twincode_error": "आपके द्वारा दर्ज किया गया \"Click-to-Call\" लिंक अमान्य लगता है।",
+        "general_error_title": "उफ़!",
+        "general_error_message": "क्षमा करें, कुछ गलत हो गया।"
     }
 }
