--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -8,6 +8,17 @@
         "activate_camera": "Активуйте камеру",
         "nickname_placeholder": "Ім'я",
         "nickname_empty_error": "Виберіть ім'я",
-        "guest": "Гість"
+        "guest": "Гість",
+        "microphone_access": "Ви повинні надати доступ до свого мікрофона, перш ніж ви зможете ним користуватися.",
+        "microphone_access_denied": "Оновіть свої дозволи, а потім оновіть сторінку.",
+        "microphone_access_not_found": "Мікрофон не знайдено.",
+        "microphone_access_error": "Сталася помилка. Переконайтеся, що мікрофон не використовується іншою програмою, і оновіть сторінку.",
+        "camera_access": "Доступ до камери",
+        "camera_access_denied": "Ви повинні надати доступ до своєї камери, перш ніж ви зможете нею користуватися.",
+        "camera_access_not_found": "Камера не знайдена.",
+        "camera_access_error": "Сталася помилка. Переконайтеся, що камера не використовується іншою програмою, і оновіть сторінку.",
+        "twincode_error": "Введене вами посилання \"Click-to-Call\" здається недійсним.",
+        "general_error_title": "Ой!",
+        "general_error_message": "Вибач, щось пішло не так."
     }
 }
