--- a/translations/translations.json
+++ b/translations/translations.json
@@ -241,5 +241,302 @@
 		"su": "Gäst",
 		"tu": "Misafir",
 		"uk": "Гість"
+	},
+	{
+		"key": "microphone_access",
+		"en": "You must grant access to your microphone before you can use it.",
+		"fr": "Vous devez accorder l'accès à votre micro avant de pouvoir l'utiliser.",
+		"ar": "يجب أن تمنح حق الوصول إلى الميكروفون الخاص بك قبل أن تتمكن من استخدامه.",
+		"cn": "您必须先授予对麦克风的访问权限，然后才能使用它。",
+		"tw": "您必須先授予對麥克風的訪問權限，然後才能使用它。",
+		"dk": "Du skal give adgang til din mikrofon, før du kan bruge den.",
+		"nl": "U moet toegang verlenen tot uw microfoon voordat u deze kunt gebruiken.",
+		"fi": "Sinun on myönnettävä mikrofonin käyttöoikeus ennen kuin voit käyttää sitä.",
+		"de": "Sie müssen Zugriff auf Ihr Mikrofon gewähren, bevor Sie es verwenden können.",
+		"he": "עליך להעניק גישה למיקרופון שלך לפני שתוכל להשתמש בו.",
+		"hi": "इससे पहले कि आप इसका उपयोग कर सकें, आपको अपने माइक्रोफ़ोन तक पहुंच प्रदान करनी होगी।",
+		"in": "Anda harus memberikan akses ke mikrofon Anda sebelum dapat menggunakannya.",
+		"it": "Devi concedere l'accesso al tuo microfono prima di poterlo utilizzare.",
+		"jp": "マイクを使用する前に、マイクへのアクセスを許可する必要があります。",
+		"kr": "마이크를 사용하려면 먼저 마이크에 대한 액세스 권한을 부여해야 합니다.",
+		"no": "Du må gi tilgang til mikrofonen din før du kan bruke den.",
+		"fa": "قبل از اینکه بتوانید از میکروفون خود استفاده کنید، باید اجازه دسترسی به آن را بدهید.",
+		"pl": "Musisz przyznać dostęp do swojego mikrofonu, zanim będziesz mógł go używać.",
+		"pt": "Você deve conceder acesso ao seu microfone antes de poder usá-lo.",
+		"ru": "Вы должны предоставить доступ к своему микрофону, прежде чем сможете его использовать.",
+		"sp": "Debe otorgar acceso a su micrófono antes de poder usarlo.",
+		"su": "Du måste ge åtkomst till din mikrofon innan du kan använda den.",
+		"tu": "Kullanmadan önce mikrofonunuza erişim izni vermelisiniz.",
+		"uk": "Ви повинні надати доступ до свого мікрофона, перш ніж ви зможете ним користуватися."
+	},
+	{
+		"key": "microphone_access_denied",
+		"en": "Update your permissions, then refresh the page.",
+		"fr": "Mettez à jour vos permissions, puis rafraîchissez la page.",
+		"ar": "قم بتحديث أذوناتك ، ثم قم بتحديث الصفحة.",
+		"cn": "更新您的权限，然后刷新页面。",
+		"tw": "更新您的權限，然後刷新頁面。",
+		"dk": "Opdater dine tilladelser, og opdater derefter siden.",
+		"nl": "Werk uw machtigingen bij en vernieuw vervolgens de pagina.",
+		"fi": "Päivitä käyttöoikeutesi ja päivitä sitten sivu.",
+		"de": "Aktualisieren Sie Ihre Berechtigungen und aktualisieren Sie dann die Seite.",
+		"he": "עדכן את ההרשאות שלך ולאחר מכן רענן את הדף.",
+		"hi": "अपनी अनुमतियाँ अद्यतन करें, फिर पृष्ठ को ताज़ा करें।",
+		"in": "Perbarui izin Anda, lalu muat ulang halaman.",
+		"it": "Aggiorna le tue autorizzazioni, quindi aggiorna la pagina.",
+		"jp": "権限を更新してからページを更新します。",
+		"kr": "권한을 업데이트한 다음 페이지를 새로 고칩니다.",
+		"no": "Oppdater tillatelsene dine, og oppdater deretter siden.",
+		"fa": "مجوزهای خود را به روز کنید، سپس صفحه را بازخوانی کنید.",
+		"pl": "Zaktualizuj swoje uprawnienia, a następnie odśwież stronę.",
+		"pt": "Atualize suas permissões e atualize a página.",
+		"ru": "Обновите свои разрешения, затем обновите страницу.",
+		"sp": "Actualice sus permisos, luego actualice la página.",
+		"su": "Uppdatera dina behörigheter och uppdatera sedan sidan.",
+		"tu": "İzinlerinizi güncelleyin, ardından sayfayı yenileyin.",
+		"uk": "Оновіть свої дозволи, а потім оновіть сторінку."
+	},
+	{
+		"key": "microphone_access_not_found",
+		"en": "No microphone was found.",
+		"fr": "Aucun micro n'a été trouvé.",
+		"ar": "لم يتم العثور على ميكروفون.",
+		"cn": "没有找到麦克风。",
+		"tw": "沒有找到麥克風。",
+		"dk": "Der blev ikke fundet nogen mikrofon.",
+		"nl": "Er is geen microfoon gevonden.",
+		"fi": "Mikrofonia ei löytynyt.",
+		"de": "Es wurde kein Mikrofon gefunden.",
+		"he": "לא נמצא מיקרופון.",
+		"hi": "कोई माइक्रोफ़ोन नहीं मिला.",
+		"in": "Tidak ada mikrofon yang ditemukan.",
+		"it": "Nessun microfono trovato.",
+		"jp": "マイクが見つかりませんでした。",
+		"kr": "마이크를 찾을 수 없습니다.",
+		"no": "Ingen mikrofon ble funnet.",
+		"fa": "میکروفونی پیدا نشد",
+		"pl": "Nie znaleziono mikrofonu.",
+		"pt": "Nenhum microfone foi encontrado.",
+		"ru": "Микрофон не найден.",
+		"sp": "No se encontró ningún micrófono.",
+		"su": "Ingen mikrofon hittades.",
+		"tu": "Mikrofon bulunamadı.",
+		"uk": "Мікрофон не знайдено."
+	},
+	{
+		"key": "microphone_access_error",
+		"en": "An error occured, check that the microphone is not in use by another application and refresh the page.",
+		"fr": "Une erreur s'est produite, vérifiez que le microphone n'est pas utilisé par une autre application et rafraîchissez la page.",
+		"ar": "حدث خطأ ، تحقق من أن الميكروفون ليس قيد الاستخدام بواسطة تطبيق آخر وقم بتحديث الصفحة.",
+		"cn": "发生错误，请检查麦克风是否被其他应用程序使用并刷新页面。",
+		"tw": "發生錯誤，請檢查麥克風是否被其他應用程序使用並刷新頁面。",
+		"dk": "Der opstod en fejl. Kontroller, at mikrofonen ikke er i brug af en anden applikation, og opdater siden.",
+		"nl": "Er is een fout opgetreden, controleer of de microfoon niet in gebruik is door een andere applicatie en ververs de pagina.",
+		"fi": "Tapahtui virhe, tarkista, ettei mikrofoni ole toisen sovelluksen käytössä, ja päivitä sivu.",
+		"de": "Es ist ein Fehler aufgetreten. Überprüfen Sie, ob das Mikrofon nicht von einer anderen Anwendung verwendet wird, und aktualisieren Sie die Seite.",
+		"he": "אירעה שגיאה, בדוק שהמיקרופון אינו בשימוש על ידי אפליקציה אחרת ורענן את העמוד.",
+		"hi": "एक त्रुटि उत्पन्न हुई, जांचें कि माइक्रोफ़ोन किसी अन्य एप्लिकेशन द्वारा उपयोग में नहीं है और पृष्ठ को ताज़ा करें।",
+		"in": "Terjadi kesalahan, periksa apakah mikrofon tidak digunakan oleh aplikasi lain dan segarkan halaman.",
+		"it": "Si è verificato un errore, verifica che il microfono non sia utilizzato da un'altra applicazione e aggiorna la pagina.",
+		"jp": "エラーが発生しました。マイクが別のアプリケーションで使用されていないことを確認して、ページを更新してください。",
+		"kr": "오류가 발생했습니다. 다른 애플리케이션에서 마이크를 사용하고 있지 않은지 확인하고 페이지를 새로고침하세요.",
+		"no": "Det oppsto en feil, sjekk at mikrofonen ikke er i bruk av et annet program og oppdater siden.",
+		"fa": "خطایی روی داد، بررسی کنید که میکروفون توسط برنامه دیگری استفاده نمی شود و صفحه را بازخوانی کنید.",
+		"pl": "Wystąpił błąd, sprawdź, czy mikrofon nie jest używany przez inną aplikację i odśwież stronę.",
+		"pt": "Ocorreu um erro, verifique se o microfone não está sendo usado por outro aplicativo e atualize a página.",
+		"ru": "Произошла ошибка, убедитесь, что микрофон не используется другим приложением, и обновите страницу.",
+		"sp": "Ocurrió un error, verifique que otra aplicación no esté usando el micrófono y actualice la página.",
+		"su": "Ett fel uppstod, kontrollera att mikrofonen inte används av en annan applikation och uppdatera sidan.",
+		"tu": "Bir hata oluştu, mikrofonun başka bir uygulama tarafından kullanılmadığını kontrol edin ve sayfayı yenileyin.",
+		"uk": "Сталася помилка. Переконайтеся, що мікрофон не використовується іншою програмою, і оновіть сторінку."
+	},
+	{
+		"key": "camera_access",
+		"en": "Camera access",
+		"fr": "Accès à la caméra",
+		"ar": "الوصول إلى الكاميرا",
+		"cn": "相机访问",
+		"tw": "相機訪問",
+		"dk": "Kameraadgang",
+		"nl": "Camera-toegang",
+		"fi": "Kameran käyttöoikeus",
+		"de": "Kamerazugriff",
+		"he": "גישה למצלמה",
+		"hi": "कैमरा पहुंच",
+		"in": "Akses kamera",
+		"it": "Accesso alla telecamera",
+		"jp": "カメラアクセス",
+		"kr": "카메라 액세스",
+		"no": "Kameratilgang",
+		"fa": "دسترسی به دوربین",
+		"pl": "Dostęp do aparatu",
+		"pt": "Acesso à câmera",
+		"ru": "Доступ к камере",
+		"sp": "Acceso a la cámara",
+		"su": "Kameraåtkomst",
+		"tu": "Kamera erişimi",
+		"uk": "Доступ до камери"
+	},
+	{
+		"key": "camera_access_denied",
+		"en": "You must grant access to your camera before you can use it.",
+		"fr": "Vous devez accorder l'accès à votre caméra avant de pouvoir l'utiliser.",
+		"ar": "يجب أن تمنح حق الوصول إلى الكاميرا الخاصة بك قبل أن تتمكن من استخدامها.",
+		"cn": "您必须先授予对相机的访问权限，然后才能使用它。",
+		"tw": "您必須先授予對相機的訪問權限，然後才能使用它。",
+		"dk": "Du skal give adgang til dit kamera, før du kan bruge det.",
+		"nl": "U moet toegang tot uw camera verlenen voordat u deze kunt gebruiken.",
+		"fi": "Sinun on myönnettävä käyttöoikeus kamerallesi, ennen kuin voit käyttää sitä.",
+		"de": "Sie müssen Zugriff auf Ihre Kamera gewähren, bevor Sie sie verwenden können.",
+		"he": "עליך להעניק גישה למצלמה שלך לפני שתוכל להשתמש בה.",
+		"hi": "अपने कैमरे का उपयोग करने से पहले आपको उस तक पहुंच प्रदान करनी होगी।",
+		"in": "Anda harus memberikan akses ke kamera sebelum dapat menggunakannya.",
+		"it": "Devi concedere l'accesso alla videocamera prima di poterla utilizzare.",
+		"jp": "カメラを使用する前に、カメラへのアクセスを許可する必要があります。",
+		"kr": "카메라를 사용하려면 먼저 카메라에 대한 액세스 권한을 부여해야 합니다.",
+		"no": "Du må gi tilgang til kameraet før du kan bruke det.",
+		"fa": "قبل از اینکه بتوانید از دوربین خود استفاده کنید، باید به دوربین خود دسترسی داشته باشید.",
+		"pl": "Musisz przyznać dostęp do swojego kamery, zanim będziesz mógł go używać.",
+		"pt": "Você deve conceder acesso à sua câmera antes de poder usá-la.",
+		"ru": "Вы должны предоставить доступ к своей камере, прежде чем сможете ее использовать.",
+		"sp": "Debe otorgar acceso a su cámara antes de poder usarla.",
+		"su": "Du måste ge åtkomst till din kamera innan du kan använda den.",
+		"tu": "Kullanmadan önce kameranıza erişim izni vermelisiniz.",
+		"uk": "Ви повинні надати доступ до своєї камери, перш ніж ви зможете нею користуватися."
+	},
+	{
+		"key": "camera_access_not_found",
+		"en": "No camera was found.",
+		"fr": "Aucune caméra n'a été trouvée.",
+		"ar": "لم يتم العثور على كاميرا.",
+		"cn": "没有找到相机。",
+		"tw": "沒有找到相機。",
+		"dk": "Intet kamera blev fundet.",
+		"nl": "Er is geen camera gevonden.",
+		"fi": "Kameraa ei löytynyt.",
+		"de": "Es wurde keine Kamera gefunden.",
+		"he": "לא נמצאה מצלמה.",
+		"hi": "कोई कैमरा नहीं मिला.",
+		"in": "Tidak ada kamera yang ditemukan.",
+		"it": "Nessuna fotocamera è stata trovata.",
+		"jp": "カメラが見つかりませんでした。",
+		"kr": "카메라를 찾을 수 없습니다.",
+		"no": "Ingen kamera ble funnet.",
+		"fa": "دوربینی پیدا نشد",
+		"pl": "Nie znaleziono kamery.",
+		"pt": "Nenhuma câmera foi encontrada.",
+		"ru": "Камера не найдена.",
+		"sp": "No se encontró ninguna cámara.",
+		"su": "Ingen kamera hittades.",
+		"tu": "Kamera bulunamadı.",
+		"uk": "Камера не знайдена."
+	},
+	{
+		"key": "camera_access_error",
+		"en": "An error occured, check that the camera is not in use by another application and refresh the page.",
+		"fr": "Une erreur s'est produite, vérifiez que la caméra n'est pas utilisée par une autre application et rafraîchissez la page.",
+		"ar": "حدث خطأ ، تحقق من أن الكاميرا ليست قيد الاستخدام بواسطة تطبيق آخر وقم بتحديث الصفحة.",
+		"cn": "发生错误，请检查相机是否被其他应用程序使用并刷新页面。",
+		"tw": "發生錯誤，請檢查相機是否被其他應用程序使用並刷新頁面。",
+		"dk": "Der opstod en fejl. Kontroller, at kameraet ikke er i brug af et andet program, og opdater siden.",
+		"nl": "Er is een fout opgetreden, controleer of de camera niet door een andere toepassing wordt gebruikt en vernieuw de pagina.",
+		"fi": "Tapahtui virhe, tarkista, ettei kamera ole toisen sovelluksen käytössä, ja päivitä sivu.",
+		"de": "Es ist ein Fehler aufgetreten. Überprüfen Sie, ob die Kamera nicht von einer anderen Anwendung verwendet wird, und aktualisieren Sie die Seite.",
+		"he": "אירעה שגיאה, בדוק שהמצלמה אינה בשימוש על ידי אפליקציה אחרת ורענן את הדף.",
+		"hi": "एक त्रुटि उत्पन्न हुई, जांचें कि कैमरा किसी अन्य एप्लिकेशन द्वारा उपयोग में नहीं है और पृष्ठ को ताज़ा करें।",
+		"in": "Terjadi kesalahan, periksa apakah kamera tidak digunakan oleh aplikasi lain dan segarkan halaman.",
+		"it": "Si è verificato un errore, verificare che la fotocamera non sia utilizzata da un'altra applicazione e aggiornare la pagina.",
+		"jp": "エラーが発生しました。カメラが別のアプリケーションで使用されていないことを確認して、ページを更新してください。",
+		"kr": "오류가 발생했습니다. 다른 애플리케이션에서 카메라를 사용하고 있지 않은지 확인하고 페이지를 새로고침하세요.",
+		"no": "Det oppstod en feil, sjekk at kameraet ikke er i bruk av et annet program og oppdater siden.",
+		"fa": "خطایی روی داد، بررسی کنید که دوربین توسط برنامه دیگری استفاده نمی شود و صفحه را بازخوانی کنید.",
+		"pl": "Wystąpił błąd, sprawdź, czy kamera nie jest używana przez inną aplikację i odśwież stronę.",
+		"pt": "Ocorreu um erro, verifique se a câmera não está sendo usada por outro aplicativo e atualize a página.",
+		"ru": "Произошла ошибка, убедитесь, что камера не используется другим приложением, и обновите страницу.",
+		"sp": "Ocurrió un error, verifique que otra aplicación no esté usando la cámara y actualice la página.",
+		"su": "Ett fel uppstod, kontrollera att kameran inte används av en annan applikation och uppdatera sidan.",
+		"tu": "Bir hata oluştu, kameranın başka bir uygulama tarafından kullanılmadığını kontrol edin ve sayfayı yenileyin.",
+		"uk": "Сталася помилка. Переконайтеся, що камера не використовується іншою програмою, і оновіть сторінку."
+	},
+	{
+		"key": "twincode_error",
+		"en": "The Click-to-Call link you entered seems invalid.",
+		"fr": "Le lien Click-to-Call que vous avez entré semble invalide.",
+		"ar": "يبدو أن رابط \"Click-to-Call\" الذي أدخلته غير صالح.",
+		"cn": "您输入的“点击通话”链接似乎无效。",
+		"tw": "您輸入的“點擊通話”鏈接似乎無效。",
+		"dk": "Det \"Click-to-Call\"-linket, du indtastede, ser ud til at være ugyldigt.",
+		"nl": "De \"Click-to-Call\"-link die u heeft ingevoerd, lijkt ongeldig.",
+		"fi": "Antamasi \"Click-to-Call\" -linkki vaikuttaa virheelliseltä.",
+		"de": "Der von Ihnen eingegebene „Click-to-Call“-Link scheint ungültig zu sein.",
+		"he": "הקישור \"Click-to-Call\" שהזנת נראה לא חוקי.",
+		"hi": "आपके द्वारा दर्ज किया गया \"Click-to-Call\" लिंक अमान्य लगता है।",
+		"in": "Tautan \"Click-to-Call\" yang Anda masukkan tampaknya tidak valid.",
+		"it": "Il link \"Click-to-Call\" che hai inserito sembra non essere valido.",
+		"jp": "入力した「Click-to-Call」リンクは無効のようです。",
+		"kr": "입력한 \"Click-to-Call\" 링크가 유효하지 않은 것 같습니다.",
+		"no": "Click-to-Call-koblingen du skrev inn, ser ut til å være ugyldig.",
+		"fa": "پیوند \"Click-to-Call\" که وارد کرده اید نامعتبر به نظر می رسد.",
+		"pl": "Wprowadzony link „Click-to-Call” wydaje się nieprawidłowy.",
+		"pt": "O link \"Click-to-Call\" inserido parece inválido.",
+		"ru": "Введенная вами ссылка \"Click-to-Call\" кажется недействительной.",
+		"sp": "El vínculo \"Click-to-Call\" que ingresó parece no ser válido.",
+		"su": "Click-to-Call-länken du angav verkar ogiltig.",
+		"tu": "Girdiğiniz \"Click-to-Call\" bağlantısı geçersiz görünüyor.",
+		"uk": "Введене вами посилання \"Click-to-Call\" здається недійсним."
+	},
+	{
+		"key": "general_error_title",
+		"en": "Oops!",
+		"fr": "Oops!",
+		"ar": "أُووبس!",
+		"cn": "哎呀！",
+		"tw": "哎呀！",
+		"dk": "Ups!",
+		"nl": "Oeps!",
+		"fi": "Oho!",
+		"de": "Hoppla!",
+		"he": "אופס!",
+		"hi": "उफ़!",
+		"in": "Ups!",
+		"it": "Ops!",
+		"jp": "おっとっと！",
+		"kr": "이런!",
+		"no": "Oops!",
+		"fa": "اوه!",
+		"pl": "Ups!",
+		"pt": "Ops!",
+		"ru": "Ой!",
+		"sp": "¡Ups!",
+		"su": "hoppsan!",
+		"tu": "Hata!",
+		"uk": "Ой!"
+	},
+	{
+		"key": "general_error_message",
+		"en": "Sorry, something went wrong.",
+		"fr": "Désolé, un problème est survenu.",
+		"ar": "عذرا، هناك خطأ ما.",
+		"cn": "抱歉，出了一些问题。",
+		"tw": "抱歉，出了一些問題。",
+		"dk": "Undskyld, noget gik galt.",
+		"nl": "Sorry, er ging iets mis.",
+		"fi": "Pahoittelut, jotain meni pieleen.",
+		"de": "Entschuldigung, etwas ist schief gelaufen.",
+		"he": "מצטערים, משהו השתבש.",
+		"hi": "क्षमा करें, कुछ गलत हो गया।",
+		"in": "Maaf, terjadi kesalahan.",
+		"it": "Scusa, qualcosa è andato storto.",
+		"jp": "申し訳ありませんが、問題が発生しました。",
+		"kr": "죄송합니다. 문제가 발생했습니다.",
+		"no": "Beklager, noe gikk galt.",
+		"fa": "با عرض پوزش، مشکلی پیش آمد.",
+		"pl": "Przepraszam, coś poszło nie tak.",
+		"pt": "Desculpe, algo deu errado.",
+		"ru": "Извините, что-то пошло не так.",
+		"sp": "Perdón, algo salió mal.",
+		"su": "Förlåt, något gick fel.",
+		"tu": "Üzgünüm, bir şeyler ters gitti.",
+		"uk": "Вибач, щось пішло не так."
 	}
 ]
