--- a/src/i18n/cn.json
+++ b/src/i18n/cn.json
@@ -8,6 +8,17 @@
         "activate_camera": "激活你的相机",
         "nickname_placeholder": "姓名",
         "nickname_empty_error": "选择一个名字",
-        "guest": "客人"
+        "guest": "客人",
+        "microphone_access": "您必须先授予对麦克风的访问权限，然后才能使用它。",
+        "microphone_access_denied": "更新您的权限，然后刷新页面。",
+        "microphone_access_not_found": "没有找到麦克风。",
+        "microphone_access_error": "发生错误，请检查麦克风是否被其他应用程序使用并刷新页面。",
+        "camera_access": "相机访问",
+        "camera_access_denied": "您必须先授予对相机的访问权限，然后才能使用它。",
+        "camera_access_not_found": "没有找到相机。",
+        "camera_access_error": "发生错误，请检查相机是否被其他应用程序使用并刷新页面。",
+        "twincode_error": "您输入的“点击通话”链接似乎无效。",
+        "general_error_title": "哎呀！",
+        "general_error_message": "抱歉，出了一些问题。"
     }
 }
