--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -8,6 +8,17 @@
         "activate_camera": "Aktivieren Sie Ihre Kamera",
         "nickname_placeholder": "Name",
         "nickname_empty_error": "Wählen Sie einen Namen",
-        "guest": "Gast"
+        "guest": "Gast",
+        "microphone_access": "Sie müssen Zugriff auf Ihr Mikrofon gewähren, bevor Sie es verwenden können.",
+        "microphone_access_denied": "Aktualisieren Sie Ihre Berechtigungen und aktualisieren Sie dann die Seite.",
+        "microphone_access_not_found": "Es wurde kein Mikrofon gefunden.",
+        "microphone_access_error": "Es ist ein Fehler aufgetreten. Überprüfen Sie, ob das Mikrofon nicht von einer anderen Anwendung verwendet wird, und aktualisieren Sie die Seite.",
+        "camera_access": "Kamerazugriff",
+        "camera_access_denied": "Sie müssen Zugriff auf Ihre Kamera gewähren, bevor Sie sie verwenden können.",
+        "camera_access_not_found": "Es wurde keine Kamera gefunden.",
+        "camera_access_error": "Es ist ein Fehler aufgetreten. Überprüfen Sie, ob die Kamera nicht von einer anderen Anwendung verwendet wird, und aktualisieren Sie die Seite.",
+        "twincode_error": "Der von Ihnen eingegebene „Click-to-Call“-Link scheint ungültig zu sein.",
+        "general_error_title": "Hoppla!",
+        "general_error_message": "Entschuldigung, etwas ist schief gelaufen."
     }
 }
