--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -8,6 +8,17 @@
         "activate_camera": "הפעל את המצלמה שלך",
         "nickname_placeholder": "שֵׁם",
         "nickname_empty_error": "בחר שם",
-        "guest": "אוֹרֵחַ"
+        "guest": "אוֹרֵחַ",
+        "microphone_access": "עליך להעניק גישה למיקרופון שלך לפני שתוכל להשתמש בו.",
+        "microphone_access_denied": "עדכן את ההרשאות שלך ולאחר מכן רענן את הדף.",
+        "microphone_access_not_found": "לא נמצא מיקרופון.",
+        "microphone_access_error": "אירעה שגיאה, בדוק שהמיקרופון אינו בשימוש על ידי אפליקציה אחרת ורענן את העמוד.",
+        "camera_access": "גישה למצלמה",
+        "camera_access_denied": "עליך להעניק גישה למצלמה שלך לפני שתוכל להשתמש בה.",
+        "camera_access_not_found": "לא נמצאה מצלמה.",
+        "camera_access_error": "אירעה שגיאה, בדוק שהמצלמה אינה בשימוש על ידי אפליקציה אחרת ורענן את הדף.",
+        "twincode_error": "הקישור \"Click-to-Call\" שהזנת נראה לא חוקי.",
+        "general_error_title": "אופס!",
+        "general_error_message": "מצטערים, משהו השתבש."
     }
 }
