--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -8,6 +8,17 @@
         "activate_camera": "Ative sua câmera",
         "nickname_placeholder": "Nome",
         "nickname_empty_error": "Escolha um nome",
-        "guest": "Convidado"
+        "guest": "Convidado",
+        "microphone_access": "Você deve conceder acesso ao seu microfone antes de poder usá-lo.",
+        "microphone_access_denied": "Atualize suas permissões e atualize a página.",
+        "microphone_access_not_found": "Nenhum microfone foi encontrado.",
+        "microphone_access_error": "Ocorreu um erro, verifique se o microfone não está sendo usado por outro aplicativo e atualize a página.",
+        "camera_access": "Acesso à câmera",
+        "camera_access_denied": "Você deve conceder acesso à sua câmera antes de poder usá-la.",
+        "camera_access_not_found": "Nenhuma câmera foi encontrada.",
+        "camera_access_error": "Ocorreu um erro, verifique se a câmera não está sendo usada por outro aplicativo e atualize a página.",
+        "twincode_error": "O link \"Click-to-Call\" inserido parece inválido.",
+        "general_error_title": "Ops!",
+        "general_error_message": "Desculpe, algo deu errado."
     }
 }
