--- a/src/i18n/su.json
+++ b/src/i18n/su.json
@@ -8,6 +8,17 @@
         "activate_camera": "Aktivera din kamera",
         "nickname_placeholder": "Namn",
         "nickname_empty_error": "Välj ett namn",
-        "guest": "Gäst"
+        "guest": "Gäst",
+        "microphone_access": "Du måste ge åtkomst till din mikrofon innan du kan använda den.",
+        "microphone_access_denied": "Uppdatera dina behörigheter och uppdatera sedan sidan.",
+        "microphone_access_not_found": "Ingen mikrofon hittades.",
+        "microphone_access_error": "Ett fel uppstod, kontrollera att mikrofonen inte används av en annan applikation och uppdatera sidan.",
+        "camera_access": "Kameraåtkomst",
+        "camera_access_denied": "Du måste ge åtkomst till din kamera innan du kan använda den.",
+        "camera_access_not_found": "Ingen kamera hittades.",
+        "camera_access_error": "Ett fel uppstod, kontrollera att kameran inte används av en annan applikation och uppdatera sidan.",
+        "twincode_error": "Click-to-Call-länken du angav verkar ogiltig.",
+        "general_error_title": "hoppsan!",
+        "general_error_message": "Förlåt, något gick fel."
     }
 }
