--- a/src/i18n/tu.json
+++ b/src/i18n/tu.json
@@ -8,6 +8,17 @@
         "activate_camera": "Kameranı etkinleştir",
         "nickname_placeholder": "İsim",
         "nickname_empty_error": "Bir isim seç",
-        "guest": "Misafir"
+        "guest": "Misafir",
+        "microphone_access": "Kullanmadan önce mikrofonunuza erişim izni vermelisiniz.",
+        "microphone_access_denied": "İzinlerinizi güncelleyin, ardından sayfayı yenileyin.",
+        "microphone_access_not_found": "Mikrofon bulunamadı.",
+        "microphone_access_error": "Bir hata oluştu, mikrofonun başka bir uygulama tarafından kullanılmadığını kontrol edin ve sayfayı yenileyin.",
+        "camera_access": "Kamera erişimi",
+        "camera_access_denied": "Kullanmadan önce kameranıza erişim izni vermelisiniz.",
+        "camera_access_not_found": "Kamera bulunamadı.",
+        "camera_access_error": "Bir hata oluştu, kameranın başka bir uygulama tarafından kullanılmadığını kontrol edin ve sayfayı yenileyin.",
+        "twincode_error": "Girdiğiniz \"Click-to-Call\" bağlantısı geçersiz görünüyor.",
+        "general_error_title": "Hata!",
+        "general_error_message": "Üzgünüm, bir şeyler ters gitti."
     }
 }
