Feature #38: plage horaire de disponibilité
Error messages for schedules.

Modified files:
  o src/services/ContactService.ts
    Add types Schedule, TimeRange, DateTimeRange, DateTime, TLTime and TLDate.
    Add functions dateTimeToString() and pad().
    Add schedule property to TwincodeInfo.
  o src/services/PeerCallService.ts
    Add "schedule" value in type TerminateReason.
    In SessionInitiateMessage type, define possible values for status property.
    In PeerCallServiceObserver interface, onSessionTerminate() now accepts a null sessionId.
    In setupWebsocket(), when receiving a session-initiate-response message, call onSessionTerminate() if status is not "success".
    Fix formatting with prettier.
  o src/calls/CallService.ts
    Bump FINISH_TIMEOUT from 3 to 5 seconds.
    In onSessionTerminate(), call onTerminateCall() instead of onTerminatePeerConnection() if sessionId is null.
    Fix formatting with prettier.
  o src/pages/Call.tsx
    Add type ScheduleLabels.
    Add timeFormat and dateFormat formatters.
    Set schedule to null in Call's default state.
    In getTerminateReasonMessage(), map TerminateReasons to messages using a dictionary object, and handle schedule messages when we know the schedule details.
    Add function getScheduleLabels(), converts a Schedule's start and end to localized labels.
    Add schedule values to TerminateReasonMessage.
  o src/i18n/en.json
  o src/i18n/fr.json
    Add labels for schedule terminate reason.
  o package.json
  o package-lock.json
    Add date-fns and date-fns-tz dependencies, used to convert zoned dates to UTC.
  o config-test.json
    Switch rest_url to https.
  o src/services/CallParticipantEvent.ts
  o src/calls/CallConnection.ts
    Fix formatting with prettier.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,6 +35,8 @@
 		"audio_call_activity_terminate_gone": "Call terminated: <strong>{{contactName}}</strong> is off-line",
 		"audio_call_activity_terminate_revoked": "Call terminated: <strong>{{contactName}}</strong> has revoked this identity",
 		"audio_call_activity_terminate_success": "Call terminated by <strong>{{contactName}}</strong>",
-		"audio_call_activity_terminate_timeout": "Call terminated: <strong>{{contactName}}</strong> does not answer"
+		"audio_call_activity_terminate_timeout": "Call terminated: <strong>{{contactName}}</strong> does not answer",
+		"audio_call_activity_terminate_schedule_single_day": "Call scheduled on <strong>{{startDate}}</strong> from <strong>{{startTime}}</strong> to <strong>{{endTime}}</strong>",
+		"audio_call_activity_terminate_schedule_multiple_days": "Call scheduled from <strong>{{startDate}}</strong> at <strong>{{startTime}}</strong> to <strong>{{endDate}}</strong> at <strong>{{endTime}}</strong>"
 	}
 }
