--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,6 +37,8 @@
 		"audio_call_activity_terminate_success": "Call terminated by <strong>{{contactName}}</strong>",
 		"audio_call_activity_terminate_timeout": "Call terminated: <strong>{{contactName}}</strong> does not answer",
 		"audio_call_activity_terminate_schedule_single_day": "Call scheduled on <strong>{{startDate}}</strong> from <strong>{{startTime}}</strong> to <strong>{{endTime}}</strong>",
-		"audio_call_activity_terminate_schedule_multiple_days": "Call scheduled from <strong>{{startDate}}</strong> at <strong>{{startTime}}</strong> to <strong>{{endDate}}</strong> at <strong>{{endTime}}</strong>"
+		"audio_call_activity_terminate_schedule_multiple_days": "Call scheduled from <strong>{{startDate}}</strong> at <strong>{{startTime}}</strong> to <strong>{{endDate}}</strong> at <strong>{{endTime}}</strong>",
+		"accept_invitation_activity_message": "{{contactName}} wants to connect with you",
+		"fullscreen_qrcode_activity_save_message": "Import or scan this invitation QR-Code with twinme to add this contact."
 	}
 }
