--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -38,6 +38,8 @@
 		"audio_call_activity_terminate_timeout": "Appel terminé : <strong>{{contactName}}</strong> ne répond pas",
 		"audio_call_activity_terminate_schedule_unknown": "Appel programmé à une date et heure définie par ailleurs",
 		"audio_call_activity_terminate_schedule_single_day": "Appel programmé le <strong>{{startDate}}</strong> de <strong>{{startTime}}</strong> à <strong>{{endTime}}</strong>",
-		"audio_call_activity_terminate_schedule_multiple_days": "Appel programmé du <strong>{{startDate}}</strong> à <strong>{{startTime}}</strong> au <strong>{{endDate}}</strong> à <strong>{{endTime}}</strong>"
+		"audio_call_activity_terminate_schedule_multiple_days": "Appel programmé du <strong>{{startDate}}</strong> à <strong>{{startTime}}</strong> au <strong>{{endDate}}</strong> à <strong>{{endTime}}</strong>",
+		"accept_invitation_activity_message": "{{contactName}} souhaite se connecter avec vous",
+		"fullscreen_qrcode_activity_save_message": "Importez ou scannez ce QR-Code d’invitation avec twinme pour ajouter ce contact."
 	}
 }
