--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -43,6 +43,8 @@
 		"conversation_activity_message": "Type a message",
 		"application_accept": "Accept",
 		"application_cancel": "Cancel",
-		"open_invitation": "Open invite"
+		"open_invitation": "Open invite",
+		"streaming_audio_activity_error_message": "An error has occured. Please try again.",
+		"application_no_network_connectivity": "No network connectivity"
 	}
 }
