Feature #68: Title et type d'app dynamiques
Modified files:
  o src/pages/Call.tsx
    In CallButtons, add a transfer parameter, and use it to determine which buttons to display.
    In render(), internationalize the page's title, and parameterize it with the app name, the type of call and the twincode's label. Pass the twincode's transfer flag to CallButtons.
  o src/i18n/fr.json
  o src/i18n/en.json
    Add "title" and "transfer" labels.

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -4,6 +4,7 @@
 		"next_time_app": "Essayez l'application mobile pour une expérience complète !",
 		"more_information": "Plus d'informations sur",
 		"call": "Appel",
+		"transfer": "Transfert",
 		"call_back": "Rappelez ou réactivez le lien.",
 		"activate_camera": "Activez votre caméra",
 		"nickname_placeholder": "Nom",
