--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,9 +1,11 @@
 {
 	"translation": {
+		"title": "{{appName}} - {{callType}} - {{linkName}}",
 		"thanks_choosing": "Thanks for choosing {{appName}}!",
 		"next_time_app": "Try the mobile app for the full experience!",
 		"more_information": "More information on",
 		"call": "Call",
+		"transfer": "Transfer",
 		"call_back": "Call back or reactivate the link.",
 		"activate_camera": "Activate your camera",
 		"nickname_placeholder": "Name",
