Bug #85: Pas de retour d'erreur si le partage d'écran ou certaines opérations sont refusées
  Modified files:
    o src/pages/Call.tsx
      Refactor getting the navigator.mediaDevices.getUserMedia() to have a unique
      place where we call it and handle errors.
      In selectAudioDevice(), selectVideoDevice(), askForMediaPermission(),
      switchCameraClick(), update to use the new getUserMedia() that handles
      errors.
      Add sharingScreenClick() handler and move the call and error handling
      from the <CallButtons> so that we better handle errors.
      Add alertError() to have a more common way to report an error.
    o translations/translations.json
      Add translations for the new message.

--- a/translations/translations.json
+++ b/translations/translations.json
@@ -459,6 +459,33 @@
 		"uk": "Сталася помилка. Переконайтеся, що камера не використовується іншою програмою, і оновіть сторінку."
 	},
 	{
+		"key": "screen_sharing_access",
+		"en": "Screen sharing",
+		"fr": "Partage d'écran",
+		"ar": "مشاركة الشاشة",
+		"cn": "屏幕共享",
+		"tw": "螢幕分享",
+		"dk": "Skærmdeling",
+		"nl": "Scherm delen",
+		"fi": "Näytön jakaminen",
+		"de": "Bildschirmfreigabe",
+		"he": "שיתוף מסך",
+		"hi": "स्क्रीन साझा करना",
+		"in": "Berbagi layar",
+		"it": "Condivisione schermo",
+		"jp": "画面共有",
+		"kr": "화면 공유",
+		"no": "Skjermdeling",
+		"fa": "اشتراک‌گذاری صفحه‌نمایش",
+		"pl": "Udostępnianie ekranu",
+		"pt": "Compartilhamento de tela",
+		"ru": "Демонстрация экрана",
+		"sp": "Compartir pantalla",
+		"su": "Delning av skärm",
+		"tu": "Ekran paylaşımı",
+		"uk": "Спільний доступ до екрана"
+	},
+	{
 		"key": "twincode_error",
 		"en": "The Click-to-Call link you entered seems invalid.",
 		"fr": "Le lien Click-to-Call que vous avez entré semble invalide.",
